@@ -1,6 +1,6 @@
 SPRING FRAMEWORK CHANGELOG
 ==========================
-$Id: changelog.txt,v 1.177 2004-06-29 15:22:37 jhoeller Exp $
+$Id: changelog.txt,v 1.178 2004-06-30 12:56:19 trisberg Exp $
 
 
 Changes in version 1.1 RC1 (11.7.2004)
@@ -45,6 +45,7 @@ Package org.springframework.dao
 * fixed DataAccessUtils' "requiredUniqueResult" method, to correctly throw an IncorrectResultSizeDataAccessException
 
 Package org.springframework.jdbc
+* added feature to allow for defining custom translations using CustomSQLErrorCodesTranslation defined in the sql-error-codes.xml
 * DataSourceUtils' "closeConnectionIfNecessary" logs error on SQLException rather than rethrowing an exception
 * removed CannotCloseJdbcConnectionException, as it is not used anymore
 * DataSourceTransactionManager closes JDBC Connection if "doBegin" fails
